# lanefollowing

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  docker-compose.yml
.nv/: index
catkin_ws/src/rosauth-0.1.7/: CMakeLists.txt  README.md  package.xml
docker/scripts/: build.sh  into.sh  kill.sh  start.sh
docs/: How-to-create-a-simple-AD-stack.md
ros2_ws/src/lane_following/: collect.py  drive.py  package.xml  setup.cfg  setup.py  visualization.yaml
ros2_ws/src/lane_following/model/caffe/: deploy.prototxt  solver.prototxt  train_val.prototxt
ros2_ws/src/lane_following/params/: collect_params.yaml  drive_params.yaml  drive_visual_params.yaml
ros2_ws/src/lane_following/train/: check_image.ipynb  preprocess.py  train.py  utils.py
scripts/: build.sh  collect.sh  drive.sh  drive_visual.sh  lane_following.sh  ros1_bridge.sh  ros2_bridge.sh
