<?xml version="1.0"?>
<package format="2">
  <name>lane_following</name>
  <version>0.0.1</version>
  <description>ROS2-based End-to-End Lane Following model</description>
  <maintainer email="david.uhm@lge.com">David Uhm</maintainer>
  <license>BSD</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>lgsvl_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
